c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/extra_credit/compound_if_expression.c
int main(void) {
    int a = 0;
    if (a += 1)
        return a;
    return 10;
}