c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_semantics/invalid_var_in_if.c
int main(void) {
    if (1)
        return c;
    int c = 0;
}